// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeViews CodeStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="sc-ckVGcZ fsAzIa"
  >
    <div
      class="sc-fMiknA kzCZTC"
    />
  </div>
</div>
`;

exports[`CodeViews CodeStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="sc-ckVGcZ fsAzIa"
  >
    <div
      class="sc-fMiknA kzCZTC"
    >
      Started streaming 1 records after 5 ms and completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`CodeViews CodeView displays nothing if not successful query 1`] = `<div />`;

exports[`CodeViews CodeView displays request and response info if successful query 1`] = `
<div>
  <div
    class="sc-htpNat fsSTsy"
  >
    <table
      class="sc-iRbamj jIoYtl"
    >
      <tbody
        class="sc-jlyJG djPKQN"
      >
        <tr
          class="sc-csuQGl fsfdVy"
        >
          <td
            class="sc-Rmtcm leCicx"
          >
            Server version
          </td>
          <td
            class="sc-bRBYWo ccSRck"
          >
            xx1
          </td>
        </tr>
        <tr
          class="sc-csuQGl fsfdVy"
        >
          <td
            class="sc-Rmtcm leCicx"
          >
            Server address
          </td>
          <td
            class="sc-bRBYWo ccSRck"
          >
            xx2
          </td>
        </tr>
        <tr
          class="sc-csuQGl fsfdVy"
        >
          <td
            class="sc-Rmtcm leCicx"
          >
            Query
          </td>
          <td
            class="sc-bRBYWo ccSRck"
          >
            MATCH xx0
          </td>
        </tr>
        <tr
          class="sc-csuQGl fsfdVy"
        >
          <td
            class="sc-Rmtcm leCicx"
          >
            Summary
            <div
              class="sc-gipzik dDUeEx fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-bRBYWo ccSRck"
          >
            {,  "server": {,    "version": "xx1", ...
          </td>
        </tr>
        <tr
          class="sc-csuQGl fsfdVy"
        >
          <td
            class="sc-Rmtcm leCicx"
          >
            Response
            <div
              class="sc-gipzik dDUeEx fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-bRBYWo ccSRck"
          >
            [,  {,    "res": "xx3" ...
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
